# hello-cuda

./: CMakeLists.txt  cuda.cu  setup.py
